%%{init: {"theme": "default"}}%%
classDiagram
    direction TB

    class Role
    class Permission
    class User
    class RefreshToken
    class Subject
    class Document
    class Chat
    class Message
    class FlashcardSet
    class Flashcard
    class Exam
    class Question
    class ExamAttempt
    class AIUsageLog
    class AuditLog
    class Bookmark

    Role         "1"   -->  "N"  User          : assigned to
    Role         "N"   <--> "N"  Permission    : role_permissions
    User         "1"   -->  "N"  RefreshToken  : owns
    User         "N"   -->  "N"  Subject       : teaches
    User         "N"   -->  "N"  Subject       : enrolled in
    Subject      "1"   -->  "N"  Document      : contains
    Subject      "1"   -->  "N"  Chat          : scoped to
    User         "1"   -->  "N"  Chat          : owns
    Chat         "1"   -->  "N"  Message       : contains
    Subject      "1"   -->  "N"  FlashcardSet  : has
    User         "1"   -->  "N"  FlashcardSet  : creates
    FlashcardSet "1"   -->  "N"  Flashcard     : contains
    Subject      "1"   -->  "N"  Exam          : has
    User         "1"   -->  "N"  Exam          : creates
    Exam         "1"   -->  "N"  Question      : has
    Exam         "1"   -->  "N"  ExamAttempt   : attempted via
    User         "1"   -->  "N"  ExamAttempt   : takes
    User         "1"   -->  "N"  Bookmark      : has
    User         "1"   -->  "N"  AIUsageLog    : tracked by
    User         "1"   -->  "N"  AuditLog      : generates
